<resources>
    <string name="app_name">Grocera</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="checkout">Checkout</string>
    <string name="select_address">Select Address</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="bill_details">Bill Details</string>
    <string name="item_total">Item Total</string>
    <string name="item_discount">Item Discount</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="to_pay">To Pay</string>
    <string name="place_order">Place Order</string>
    <string name="edit_address">Edit Address</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="manage_address">Manage Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="pin_code">PIN Code</string>
    <string name="order_placed">Order Placed!</string>
    <string name="track_order">Track Order</string>
    <string name="shop_name">Shop Name</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="your_order_is_confirmed">Your Order is confirmed</string>
    <string name="out_for_delivery">Out for delivery</string>
    <string name="your_order_is_on_the_way">Your order is on the way</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="your_order_is_delivered">Your order is delivered</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="your_order_is_cancelled">Your order is cancelled</string>
    <string name="total">Total</string>
    <string name="reorder">Reorder</string>
    <string name="my_orders">My Orders</string>
    <string name="cancel">CANCEL</string>
    <string name="view_cart">View Cart</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_with_email">Register with email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="my_cart">My Cart</string>
    <string name="sort_filter">Sort/Filter</string>
    <string name="cannot_find">Oops! Cannot find any grocery shop :( \n Please, Check if laocation services are off</string>
    <string name="help">help</string>
    <string name="stores">Stores</string>
    <string name="products">Products</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="online">Online</string>
    <string name="product_name">Product Name</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>

    <string-array name="fruits_and_vegetables">
        <item>Fresh Vegetables</item>
        <item>Fresh Fruits</item>
        <item>Herbs and Seasoning</item>
    </string-array>

    <string-array name="foodgrains">
        <item>Atta, Flours and Souji</item>
        <item>Rice and Rice Products</item>
        <item>Dal and Pulses</item>
        <item>Salt, Sugar and Jaggery</item>
        <item>Edible oils and ghee</item>
        <item>Masala and Spices</item>
        <item>Dry Fruits</item>
    </string-array>

    <string-array name="bakery">
        <item>Dairy</item>
        <item>Breads and Buns</item>
        <item>Cookies, Rusk and Khari</item>
        <item>Ice creams and Deserts</item>
        <item>Cakes and Pastries</item>
        <item>Bakery Snacks</item>
    </string-array>

    <string-array name="snacks">
        <item>Breakfast Cereals</item>
        <item>Noodles and Pasta</item>
        <item>Biscuits and Cookies</item>
        <item>Frozen Veggies and Snacks</item>
        <item>Snacks, Sauces and Ketchup</item>
        <item>Ready to cook and eat</item>
        <item>Chocolate and Candies</item>
        <item>Pickels and Candies</item>
        <item>Indian Sweets</item>
    </string-array>

    <string-array name="beauty">
        <item>Oral Care</item>
        <item>Feminine Hygiene</item>
        <item>Bath and Hand Wash</item>
        <item>Health and Medicine</item>
        <item>Men Grooming</item>
        <item>Skin Care</item>
        <item>Fragrences and Deos</item>
        <item>Make up</item>
    </string-array>

    <string-array name="cleaning">
        <item>Detergents and Dishwash</item>
        <item>All Purpose Cleaners</item>
        <item>Disposable, Garbage Bags</item>
        <item>Freshners and Repellents</item>
        <item>Mops, Brushes and Scrubs</item>
        <item>Bins and Bathroom Ware</item>
        <item>Pooja Needs</item>
        <item>Party and Festive Needs</item>
        <item>Car and Show Care</item>
        <item>Stationary</item>
    </string-array>

    <string-array name="kitchen">
        <item>Pet Food and Accessories</item>
        <item>Cookware and Non stick</item>
        <item>Appliances and Electricals</item>
        <item>Steel Utensils</item>
        <item>Kitchen Accessories</item>
        <item>Storage Accessories</item>
        <item>Bakeware</item>
        <item>Gardening</item>
    </string-array>

    <string-array name="eggs">
        <item>Eggs</item>
        <item>Marinades</item>
        <item>Poultry</item>
        <item>Mutton and Lamb</item>
        <item>Fish and Seafood</item>
        <item>Pork</item>
    </string-array>

    <string-array name="baby_care">
        <item>Baby Food and Formula</item>
        <item>Diapers and Wipes</item>
        <item>Baby Bath and Hygiene</item>
        <item>Mothers and Maternity</item>
        <item>Feeding and Nursing</item>
        <item>Baby Accessories</item>
    </string-array>
</resources>


















