<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAddressActivity"
    android:orientation="vertical"
    android:background="@color/light_orange">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_margin="12dp"
            android:textColor="@android:color/black"
            android:text="@string/edit_address"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/edit_address_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"/>

            <EditText
                android:id="@+id/edit_address_address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:maxLines="3"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"/>

            <Button
                android:id="@+id/edit_address_submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_margin="12dp"
                android:text="@string/save"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>