<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light_orange">

    <android.support.v7.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/go_back_btn"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/go_back_left_arrow"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_margin="12dp"
                android:text="@string/edit_profile"
                android:gravity="start"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="@android:color/black"
                    android:ems="10"
                    android:hint="@string/name"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="@android:color/black"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="@android:color/black"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp" />

                <EditText
                    android:id="@+id/pin_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="@android:color/black"
                    android:ems="10"
                    android:hint="@string/pin_code"
                    android:inputType="phone"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>

                <EditText
                    android:id="@+id/otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="@android:color/black"
                    android:hint="OTP"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/verify_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:elevation="1dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="Verify OTP"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:background="@drawable/green_gradient"
                    android:textSize="20sp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/green_gradient"
                    android:elevation="1dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="@string/save"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="12dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

</LinearLayout>